--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "env NODE_ENV=development node index.js",
     "build": "docker build -t dmsc/duo-cron-job .",
     "prod": "env NODE_ENV=production node index.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "eslint --fix . && echo Lint complete."
   },
   "keywords": [
     "duo",
@@ -25,8 +26,16 @@
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
+    "eslint-plugin-jest": "^23.11.0",
     "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
     "sinon": "^9.0.2"
+  },
+  "devDependencies": {
+    "jest-fetch-mock": "^3.0.3",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
