--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "test": "jest --coverage",
     "lint": "eslint --fix . && echo Lint complete."
   },
+  "lint-staged": {
+    "**/*.{js,ts}": "npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [
     "duo",
     "cron-job",
@@ -39,7 +47,9 @@
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.6"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
