--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ test:
   stage: test
   script:
     - npm install
-    - NODE_ENV=ci npm run test
+    - NODE_ENV=test npm run test
   tags:
     - docker
 
