--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -58,4 +58,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: dmsc/duo-cron-job
+          tags: dmsc/duo-cron-job:${{ github.head_ref }}
