--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -46,4 +46,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: dmsc/duo-cron-job
+          tags: dmsc/duo-cron-job:${{ steps.extract_branch.outputs.branch }}
