--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "env NODE_ENV=development env API_URL=http://localhost:4000/graphql node index.js",
+    "debug": "env NODE_ENV=development env API_URL=http://localhost:4000/graphql node  --inspect index.js",
     "build": "docker build -t dmsc/duo-cron-job .",
     "prod": "env NODE_ENV=production env API_URL=http://backend:4000/graphql node index.js",
     "test": "env NODE_ENV=test env API_URL=http://localhost:4000/graphql env API_AUTH_TOKEN=testtoken jest --coverage",
@@ -34,6 +35,7 @@
     "node": ">=12.13.0"
   },
   "dependencies": {
+    "@user-office-software/duo-logger": "^1.2.0",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "envalid": "^6.0.1",
@@ -43,13 +45,13 @@
     "sinon": "^9.0.2"
   },
   "devDependencies": {
-    "jest-fetch-mock": "^3.0.3",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.6"
+    "jest-fetch-mock": "^3.0.3",
+    "lint-staged": "^10.1.6",
+    "prettier": "^2.0.5"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
