--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node cron job service for ESS User Office project.",
   "main": "index.js",
   "repository": {
-    "url": "https://gitlab.esss.lu.se/swap/duo-cron-job"
+    "url": "https://github.com/UserOfficeProject/user-office-cron"
   },
   "scripts": {
     "dev": "env NODE_ENV=development env API_URL=http://localhost:4000/graphql node index.js",
@@ -32,26 +32,28 @@
   "author": "SWAP",
   "license": "ISC",
   "engines": {
-    "node": ">=12.13.0"
+    "npm": ">=8.0.0",
+    "node": ">=16.0.0"
   },
   "dependencies": {
-    "@user-office-software/duo-logger": "^1.2.0",
-    "cron": "^1.8.2",
-    "dotenv": "^8.6.0",
-    "envalid": "^6.0.2",
-    "eslint-plugin-jest": "^23.20.0",
-    "jest": "^26.6.3",
+    "@user-office-software/duo-logger": "^2.0.2",
+    "cron": "^2.0.0",
+    "dotenv": "^16.0.1",
+    "envalid": "^7.3.1",
+    "jest": "^28.1.0",
+    "luxon": "^2.4.0",
     "node-fetch": "^2.6.7",
-    "sinon": "^9.2.4"
+    "sinon": "^14.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.4.6",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^4.3.8",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^10.1.6",
-    "prettier": "^2.0.5"
+    "lint-staged": "^13.0.0",
+    "prettier": "^2.6.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.3"
