--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -56,3 +56,21 @@ jobs:
           tags: |
             dmsc/duo-cron-job:${{ steps.extract_branch.outputs.branch }}
             ghcr.io/userofficeproject/user-office-cron:${{ steps.extract_branch.outputs.branch }}
+            
+      - name: Trigger pipeline
+        run: |
+          REPOSITORY=${{ github.repository }}
+          RESULT=$(curl -X POST \
+            -F token="${{ secrets.GITLAB_TRIGGER_TOKEN }}" \
+            -F ref=master \
+            -F "variables[RUN_DEPLOY]=1" \
+            -F "variables[ENVIRONMENT]=${{ steps.extract_branch.outputs.branch }}" \
+            -F "variables[REPOSITORY]=${REPOSITORY#UserOfficeProject/}" \
+            -o /dev/null \
+            --silent \
+            --write-out '%{http_code}' \
+            ${{ secrets.GITLAB_TRIGGER_URL }})
+          if [[ $RESULT != "201" ]]; then
+            echo "Failed to trigger Gitlab pipeline: $RESULT"
+            exit 1
+          fi
