--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -6,8 +6,10 @@ name: Build && Push
 # events but only for the develop branch
 on:
   push:
-    branches: [develop, master]
-
+    branches: 
+      - develop
+      - staging
+      - master
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
