--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -6,8 +6,10 @@ name: Build && Push
 # events but only for the develop branch
 on:
   push:
-    branches: [develop, master]
-
+    branches:
+      - develop
+      - staging
+      
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -18,13 +20,13 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -36,23 +38,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract branch name
-        id: extract_branch
-        shell: bash
-        run: |
-          # Extract branch name
-          BRANCH_NAME=${GITHUB_REF#refs/heads/}
-          # set output variable accessible in the action
-          echo ::set-output name=branch::${BRANCH_NAME}
-      # For debugging capture the selected branch
-      - name: Extracted branch
-        run: echo "Extracted branch ${{ steps.extract_branch.outputs.branch }}"
+      - id: extract_branch
+        uses: swapActions/get-branch-name@v1
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
           tags: |
             dmsc/duo-cron-job:${{ steps.extract_branch.outputs.branch }}
             ghcr.io/userofficeproject/user-office-cron:${{ steps.extract_branch.outputs.branch }}
+            
+      - name: Trigger pipeline
+        uses: swapActions/trigger-useroffice-deployment@v1
+        with:
+          repository: ${{ github.repository }}
+          environment: ${{ steps.extract_branch.outputs.branch }}
+          gh-trigger-url: ${{ secrets.GITLAB_TRIGGER_URL }}
+          gh-token: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
