fix: fix the mutations and upgrade packages

--- a/example.env
+++ b/example.env
@@ -1,4 +1,11 @@
 HOST=[host]
 PORT=[port]
 API_URL=[duo-backend-url]
+# We can generate and use API access token here with following requirements:
+# Permissions needed for cron API token:
+# - FeedbackQueries.getFeedbackByScheduledEventId
+# - ScheduledEventQueries.getScheduledEventsCore
+# - UserQueries.getAll
+# - FeedbackMutations.requestFeedback
+# - UserMutations.delete
 API_AUTH_TOKEN=[duo-backend-auhentication-token]
