--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -24,12 +24,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -46,9 +40,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: |
-            dmsc/duo-cron-job:${{ steps.extract_branch.outputs.branch }}
-            ghcr.io/userofficeproject/user-office-cron:${{ steps.extract_branch.outputs.branch }}
+          tags: ghcr.io/userofficeproject/user-office-cron:${{ steps.extract_branch.outputs.branch }}
             
       - name: Trigger pipeline
         uses: swapActions/trigger-useroffice-deployment@v1
