--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -47,11 +47,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # For debugging capture the selected branch
       - name: Extracted branch
@@ -62,6 +63,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: |
-            dmsc/duo-cron-job:${{ github.head_ref }}
-            ghcr.io/userofficeproject/user-office-cron:${{ github.head_ref }}
+          tags: ghcr.io/userofficeproject/user-office-cron:${{ github.head_ref }}
