--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -48,6 +48,8 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to GitHub Container Registry
+        # Don't login if dependabot is creating the PR
+        if: ${{ !startsWith(github.head_ref, 'dependabot') }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -60,7 +62,8 @@ jobs:
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v4
         with:
-          push: true
+          # Don't push if dependabot is creating the PR
+          push: ${{ !startsWith(github.head_ref, 'dependabot') }}
           tags: ghcr.io/userofficeproject/user-office-cron:${{ github.head_ref }}
