feat(initializeLogger.js): add module to initialize logger with ConsoleLogger and GrayLogLogger feat(example.env): add commented out GRAYLOG_SERVER and GRAYLOG_PORT variables for configuring Graylog logger feat(index.js): add logger initialization and log message to indicate that all jobs are running

--- a/example.env
+++ b/example.env
@@ -9,3 +9,5 @@ API_URL=[duo-backend-url]
 # - FeedbackMutations.requestFeedback
 # - UserMutations.delete
 API_AUTH_TOKEN=[duo-backend-auhentication-token]
+# GRAYLOG_SERVER=
+# GRAYLOG_PORT=
